# espocrm-client

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ESPOCRM_API_COMPLIANCE_ANALYSIS.md  ESPOCRM_PYTHON_CLIENT_PLAN.md  GITHUB_ACTIONS_WORKFLOWS.md  LICENSE  MANIFEST.in  Mock Entity  PYPI_DEPLOYMENT_GUIDE.md  PYPI_RELEASE_PLAN.md  PYPI_TROUBLESHOOTING.md  README.md  RELEASE_CHECKLIST.md  integration_test.txt  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml  tests.yml
docs/: authentication.md  configuration.md  crud.md  index.md  installation.md  logging.md  metadata.md  quickstart.md  relationships.md  stream.md
espocrm/: __init__.py  cli.py  client.py  config.py  exceptions.py  py.typed
espocrm/auth/: __init__.py  api_key.py  base.py  basic.py  hmac.py
espocrm/clients/: __init__.py  attachments.py  base.py  crud.py  metadata.py  relationships.py  stream.py
espocrm/logging/: __init__.py  formatters.py  handlers.py  logger.py  metrics.py
espocrm/models/: __init__.py  attachments.py  base.py  entities.py  metadata.py  requests.py  responses.py  search.py  stream.py
espocrm/utils/: __init__.py  helpers.py  http.py  serializers.py  validators.py
examples/: auth_examples.py  basic_usage.py  client_example.py  crud_example.py  logging_example.py  metadata_example.py  relationship_example.py  stream_example.py
scripts/: validate_package.py  version_manager.py
tests/: README.md  __init__.py  conftest.py  test_metadata.py  test_metadata_simple.py  test_runner.py
tests/integration/: __init__.py  test_end_to_end.py
tests/test_auth/: __init__.py  test_authentication.py
tests/test_clients/: __init__.py  test_attachments.py  test_crud.py  test_metadata.py  test_relationships.py  test_stream.py
tests/test_logging/: __init__.py  test_logger.py
tests/test_models/: __init__.py  test_entities.py
tests/test_utils/: __init__.py  test_http.py
